dfwefwefe for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -8,9 +8,49 @@
 	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-	<div class="tanslate_body">
+	<div class="translate_body">
 		<span class="logo_img"><img src="pic/logo.png"/></span>
-		<div class="tanslate_main">
+		<div class="translate_main">
+			<textarea placeholder="Please enter the text here"></textarea>
+			<div class="result">
+				<div class="translation">
+					<h2>译文</h2>
+					<div class="translation_main">
+						<ul>
+							<li>dog</li>
+							<li>n. 狗；丑女人；卑鄙的人；(俚)朋友</li>
+							<li>vt. 跟踪；尾随</li>
+						</ul>
+					</div>
+				</div>
+				<div class="phrase">
+					<h2>短语</h2>
+					<div class="phrase_main">
+						<ul>
+							<li>
+								<div>
+									<span><span>1.</span>Chinese people</span>
+									<div>
+										<p>中国人</p>
+										<p>中国人</p>
+										<p>华夏人</p>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div>
+									<span><span>1.</span>Chinese people</span>
+									<div>
+										<p>中国人</p>
+										<p>中国人</p>
+										<p>华夏人</p>
+									</div>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 <script scr="lib/vue/vue.min.js"></script>
